
syntax = "proto3";

package hello;

service Hello {
    rpc HelloWorld(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string message = 1;
}
message HelloResponse {
    string message = 1;
}